--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,6 +10,9 @@ matterbridge_ens_name: bridge.stateofus.eth
 # configuration for gateways
 matterbridge_gateways: []
 
+# configuration for bridges
+matterbridge_bridges: {}
+
 # general container management
 cont_state: started
 cont_recreate: false
