config: add node JSON config for matterbridge
Source:
https://raw.githubusercontent.com/status-im/matterbridge/waku2/config/fleet.json

Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -17,3 +17,11 @@
     owner: dockremap
     group: docker
   register: config_file
+
+- name: MatterBridge | Copy over Status node config
+  copy:
+    src:   'node_config.json'
+    dest:  '{{ matterbridge_cont_vol }}/config/node.json'
+    owner: 'dockremap'
+    group: 'docker'
+  register: config_file
