--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,6 +8,7 @@ matterbridge_version: 'v1.26.0-status'
 matterbridge_cont_image: 'statusteam/matterbridge:{{ matterbridge_version }}'
 matterbridge_cont_name: '{{ matterbridge_service_name }}'
 matterbridge_cont_vol: '{{ matterbridge_service_path }}/app'
+matterbridge_cont_env: {}
 
 # general config
 matterbridge_debug: false
