consul: remove separate API service definition
Used to be necessary for `chat2bridge` which is gone now.

Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -16,7 +16,7 @@ matterbridge_nick: bridge
 matterbridge_ens_name: bridge.stateofus.eth
 
 # configuration for API
-matterbridge_api_enabled: false
+matterbridge_api_enabled: true
 matterbridge_api_port: 4242
 
 # configuration for gateways
