config: fix variable name for node config register
Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -24,4 +24,4 @@
     dest:  '{{ matterbridge_cont_vol }}/config/node.json'
     owner: 'dockremap'
     group: 'docker'
-  register: config_file
+  register: node_config_file
