--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -8,9 +8,8 @@
     mode: 0644
 
 - name: MatterBridge | Create container
-  docker_compose:
+  community.docker.docker_compose_v2:
     project_src: '{{ matterbridge_service_path }}'
-    pull: true
-    state: '{{ compose_state }}'
-    restarted: '{{ config_file.changed or compose_restart }}'
-    recreate: '{{ compose_recreate }}'
+    recreate:    '{{ compose_recreate }}'
+    pull:        '{{ compose_pull }}'
+    state:       '{{ "restarted" if config_file.changed else compose_state }}'
