docker: use latest image
https://harbor.status.im/harbor/projects/12/repositories/matterbridge/artifacts-tab/artifacts/sha256:4c84f1ea93e964646463d20bd4ddcdbd82e4433a5f2d5cb261cae99bc4cd133e

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,7 +4,7 @@ matterbridge_service_path: '/docker/{{ matterbridge_service_name }}'
 matterbridge_compose_file: '{{ matterbridge_service_path }}/docker-compose.yml'
 
 # container
-matterbridge_version: 'v1.26.0-status'
+matterbridge_version: 'latest'
 matterbridge_cont_image: 'harbor.status.im/status-im/matterbridge:{{ matterbridge_version }}'
 matterbridge_cont_name: '{{ matterbridge_service_name }}'
 matterbridge_cont_vol: '{{ matterbridge_service_path }}/app'
