compose: add optional external Docker network support
- https://github.com/status-im/infra-misc/issues/458

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -9,6 +9,7 @@ matterbridge_cont_image: 'harbor.status.im/status-im/matterbridge:{{ matterbridg
 matterbridge_cont_name: '{{ matterbridge_service_name }}'
 matterbridge_cont_vol: '{{ matterbridge_service_path }}/app'
 matterbridge_cont_env: {}
+matterbridge_external_network: ''
 
 # general config
 matterbridge_debug: false
